--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Google Font -->
 
     <link
-      href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800"
       rel="stylesheet"
       type="text/css"
     />
@@ -91,9 +91,9 @@
   </head>
 
   <body id="body">
-    <div id="preloader">
+    <!-- <div id="preloader">
       <img src="img/preloader.gif" alt="Preloader" />
-    </div>
+    </div> -->
 
     <header id="navigation" class="navbar-fixed-top navbar">
       <div class="container">
@@ -158,12 +158,11 @@
           <!-- single slide -->
           <div
             class="item active"
-            style="background-image: url(img/banner.jpg)"
+            style="background-image: url(img/banner.webp)"
           >
             <div class="carousel-caption">
               <h2
                 data-wow-duration="400ms"
-                data-wow-delay="200ms"
                 class="wow fadeInUp animated mb-20"
               >
                 <span> Creditare - Refinantare</span>
@@ -171,7 +170,6 @@
               <a
                 class="main-btn py-10 hover:py-10 px-20 hover:px-20 wow fadeInUp animated"
                 data-wow-duration="400ms"
-                data-wow-delay="400ms"
                 href="#contact"
                 >Hai sa discutam</a
               >
@@ -180,11 +178,10 @@
           <!-- end single slide -->
 
           <!-- single slide -->
-          <div class="item" style="background-image: url(img/banner-1.jpg)">
+          <div class="item" style="background-image: url(img/banner-1.webp)">
             <div class="carousel-caption">
               <h2
                 data-wow-duration="500ms"
-                data-wow-delay="500ms"
                 class="wow fadeInUp animated mb-20"
               >
                 <span
@@ -444,7 +441,7 @@
               sesiune de consultanță financiară de calitate, disponibilă gratuit.</p>
           </div>
           <div class="flex 2xl:justify-end">
-            <img src="/img/ridami.png" class="2xl:h-[700px] 2xl:w-[700px]" />
+            <img src="/img/ridami.webp" alt="ridami logo for design" class="2xl:h-[700px] 2xl:w-[700px]" />
           </div>
         </div>
       </div>
@@ -524,9 +521,9 @@
       <a class="text-yellow-400 hover:text-green-600" href="http://influendoo.com/">Influendoo</a>
     </footer>
 
-    <a href="javascript:void(0);" id="back-top"
+    <div id="back-top"
       ><i class="fa fa-angle-up fa-3x"></i
-    ></a>
+    ></div>
 
     <!-- Essential jQuery Plugins
 		================================================== -->
@@ -537,25 +534,21 @@
     <!-- Twitter Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
     <!-- jquery.fancybox.pack -->
-    <script src="js/jquery.fancybox.pack.js"></script>
+    <!-- <script src="js/jquery.fancybox.pack.js"></script> -->
     <!-- jquery.mixitup.min -->
-    <script src="js/jquery.mixitup.min.js"></script>
+    <!-- <script src="js/jquery.mixitup.min.js"></script> -->
     <!-- jquery.parallax -->
-    <script src="js/jquery.parallax-1.1.3.js"></script>
+    <!-- <script src="js/jquery.parallax-1.1.3.js"></script> -->
     <!-- jquery.countTo -->
-    <script src="js/jquery-countTo.js"></script>
+    <!-- <script src="js/jquery-countTo.js"></script> -->
     <!-- jquery.appear -->
-    <script src="js/jquery.appear.js"></script>
+    <!-- <script src="js/jquery.appear.js"></script> -->
     <!-- Contact form validation -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-    <!-- Google Map -->
-    <script
-      type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?sensor=false"
-    ></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script> -->
+    
     <!-- jquery easing -->
-    <script src="js/jquery.easing.min.js"></script>
+    <!-- <script src="js/jquery.easing.min.js"></script> -->
     <!-- jquery easing -->
     <script src="js/wow.min.js"></script>
     <script>
@@ -572,61 +565,7 @@
     <script src="js/custom.js"></script>
 
     <script type="text/javascript">
-      $(function () {
-        /* ========================================================================= */
-        /*	Contact Form
-				/* ========================================================================= */
-
-        $("#contact-form").validate({
-          rules: {
-            name: {
-              required: true,
-              minlength: 2,
-            },
-            email: {
-              required: true,
-              email: true,
-            },
-            message: {
-              required: true,
-            },
-          },
-          messages: {
-            name: {
-              required: "come on, you have a name don't you?",
-              minlength: "your name must consist of at least 2 characters",
-            },
-            email: {
-              required: "no email, no message",
-            },
-            message: {
-              required:
-                "um...yea, you have to write something to send this form.",
-              minlength: "thats all? really?",
-            },
-          },
-          submitHandler: function (form) {
-            $(form).ajaxSubmit({
-              type: "POST",
-              data: $(form).serialize(),
-              url: "process.php",
-              success: function () {
-                $("#contact-form :input").attr("disabled", "disabled");
-                $("#contact-form").fadeTo("slow", 0.15, function () {
-                  $(this).find(":input").attr("disabled", "disabled");
-                  $(this).find("label").css("cursor", "default");
-                  $("#success").fadeIn();
-                });
-              },
-              error: function () {
-                $("#contact-form").fadeTo("slow", 0.15, function () {
-                  $("#error").fadeIn();
-                });
-              },
-            });
-          },
-        });
-      });
+      
     </script>
   </body>
 </html>
